--- a/frontend/src/app/sauce-form/sauce-form.component.html
+++ b/frontend/src/app/sauce-form/sauce-form.component.html
@@ -28,5 +28,5 @@
       <input type="number" class="form-control heat-reading" formControlName="heatValue">
     </div>
   </div>
-  <button mat-raised-button color="primary" (click)="onSubmit()" [disabled]="sauceForm.invalid">SUBMIT</button>
+  <button mat-raised-button color="primary" type="button" (click)="onSubmit()" [disabled]="sauceForm.invalid">SUBMIT</button>
 </form>
